fixed spacing on shuttle and destination text

--- a/shuttle-client/src/app/banner-details/banner-details.component.css
+++ b/shuttle-client/src/app/banner-details/banner-details.component.css
@@ -76,7 +76,7 @@
 }
 
     .format ::ng-deep .ui-button-text {
-      margin-top: 5.5px;
+      margin-top: 8px;
       letter-spacing: 0.5px;
       text-transform: uppercase;
   }
@@ -150,7 +150,7 @@ p-button{
     margin-right:1%;
     margin-left: 2%;
     position: relative;
-    top: 11px;
+    top: 14px;
 
 }
 
