--- a/shuttle-client/src/app/trips/trips.component.css
+++ b/shuttle-client/src/app/trips/trips.component.css
@@ -325,7 +325,8 @@
 }
 
 .fix{
-  padding-top: 8px;
+  padding-top: 9px;
+  padding-left: 2px;
   font-family: "Arial Rounded MT", "Arial";
   font-weight: 400;
   font-size: 24px;
